kubernetes/gamification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: gamification
  name: gamification-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: gamification
  template: 
    metadata: 
      labels: 
        app: gamification
    spec: 
      containers: 
        - 
          image: registry.tech4comp.dbis.rwth-aachen.de/rwthacis/gamification
          name: gamification
          ports: 
            - 
              containerPort: 8080
