kubernetes/gamification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gamification-service
spec:
  selector:
    app: gamification
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
